--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -14,3 +14,28 @@
 !/affe/
 !/vertico/
 !/prescient/
+!/copilot-chat/
+!/magit/
+!/corfu/
+!/cape/
+!/tempel/
+!/ess/
+!/vundo/
+!/flycheck/
+!/eglot-tempel/
+!/eglot-booster/
+!/aio/
+!/request/
+!/polymode/
+!/markdown-mode/
+!/shell-maker/
+!/mcp/
+!/llama/
+!/with-editor/
+!/clojure-mode/
+!/parseedn/
+!/spinner/
+!/sesman/
+!/cider/
+!/parseclj/
+!/transient/
